--- a/public/index.html
+++ b/public/index.html
@@ -116,10 +116,10 @@
 
 
     <!-- Auth0 JavaScript -->
-    <!-- <script src="https://cdn.auth0.com/js/auth0/9.14.0/auth0.min.js"></script> -->
+    <script src="https://cdn.auth0.com/js/auth0/9.14.0/auth0.min.js"></script>
 
     <!-- View JavaScript -->
-    <!-- <script src="./javascript/views/shared/login.js" type="module"></script> -->
+    <script src="./javascript/views/shared/login.js" type="module"></script>
     <script src="./javascript/views/index.js" type="module"></script>
 
    
