--- a/public/index.html
+++ b/public/index.html
@@ -77,11 +77,11 @@
                 </div>
                 <div class="modal-body form-group">
                 <form id="postForm">
-                    <div class="form-group">
+                    <div class="form-group m-3">
                         <label for="post_title">Title:</label><br>
                         <input type="text" name="post_title" id="post_title">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group m-3">
                         <label for="post_body">Body</label>
                         <textarea class="form-control" id="post_body" rows="3"></textarea>
                     </div>
