--- a/public/userProfile.html
+++ b/public/userProfile.html
@@ -1,73 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/profileStyle.css">
   <title>User Profile</title>
 </head>
+
 <body>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-        <a class="navbar-brand text-danger" href="./index.html">GossipBoard</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home
-                        <span class="sr-only"></span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a id="login" class="nav-link" href="#"><span
-                            class="bi bi-box-arrow-in-right link-icon"></span>Login</a>
-                </li>
-                <li class="nav-item">
-                    <a id="get-profile" class="nav-link" href="./userProfile.html">
-                        <span class="bi bi-person-fill link-icon"></span>Profile (current)</a>
-                </li>
-                <li class="nav-item">
-                    <a id="logout" class="nav-link" href="#">
-                        <span class="bi bi-box-arrow-in-left link-icon"></span>Logout</a>
-                </li 
-            </ul>
-        </div>
+      <a class="navbar-brand text-danger" href="./index.html">GossipBoard</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="./index.html">Home
+              <span class="sr-only"></span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a id="login" class="nav-link" href="#"><span class="bi bi-box-arrow-in-right link-icon"></span>Login</a>
+          </li>
+          <li class="nav-item">
+            <a id="get-profile" class="nav-link" href="./userProfile.html">
+              <span class="bi bi-person-fill link-icon"></span>Profile (current)</a>
+          </li>
+          <li class="nav-item">
+            <a id="logout" class="nav-link" href="#">
+              <span class="bi bi-box-arrow-in-left link-icon"></span>Logout</a>
+          </li </ul>
+      </div>
     </div>
-</nav>
-
-  <h1>Welcome to Profile Page</h1>
-
-  <div id="results"></div>
-
-  <div id="resultsEmail"></div>
-
-  <div id="resultsId"></div>
-
-  <div id="userName"></div>
+  </nav>
 
 
+  <!-- Profile layout in header section -->
+  <div class="profile mb-md-3">
+    <header>
+      <div class="details">
+        <img src="https://i.imgur.com/UsK71qW.png" alt="default user image" class="profilePic ">
+        <h1 class="p-2 mt-md-3 mb-md-3" id="username"></h1>
+        <div class="userinfo">
+          <div class="col-4">
+            <h4>Nickname:</h4>
+            <p id="userNickname"></p>
+          </div>
+          <div class="col-4">
+            <h4>Email:</h4>
+            <p id="userEmail"></p>
+          </div>
+          <div class="col-4">
+            <h4>User Since:</h4>
+            <p id="userSince"></p>
+          </div>
+
+
+        </div>
+
+      </div>
+    </header>
+  </div>
+
+  <div class="container">
+
+    <!-- Output test details -->
+    <div id=testDetails>
+      <h1>Your Profile Page</h1>
+
+
+    </div>
+
+
+
+  </div>
   <footer>
 
 
   </footer>
-  
+
   <!-- Load BootStrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <!-- Bootstrap icons https://icons.getbootstrap.com/ -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
   <!-- BootStrap 5 JavaScript Dependencies  -->
   <!-- JavaScript Bundle with jQuery and Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous">
-  </script>
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+    </script>
 
 
 
@@ -81,4 +110,5 @@
 
 
 </body>
+
 </html>
