--- a/public/userProfile.html
+++ b/public/userProfile.html
@@ -19,7 +19,7 @@
   <title>User Profile</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -81,21 +81,13 @@
   </div>
 
   <div class="container">
-
-    <!-- Output test details -->
-    <div id=testDetails>
-      <h1>Your Profile Page</h1>
-
-
-    </div>
-
-
-
   </div>
-  <footer>
-
-
-  </footer>
+ 
+  <footer class="bg-light text-center text-lg-start mt-auto">
+    <div class="text-center text-light p-3" style="background-color: rgba(0, 0, 0, 1);">
+        GossipBoard© Copyright 2021
+    </div>
+</footer>
 
  
    <!-- BootStrap 5 JavaScript Dependencies  -->
